# pitchtrack

./: .gitignore  README.md  stack.yaml
dywapitchtrack/: LICENSE  dywapitchtrack.cabal
dywapitchtrack/src/: DywaPitchTrack.hs
dywapitchtrack/src/DywaPitchTrack/Internal/: Bindings.hs
pitchtrack/: pitchtrack.cabal
pitchtrack/src/: PitchTrack.hs
pitchtrack/src/PitchTrack/: Pipes.hs  Track.hs
pitchtrack/src/Test/: Simple.hs  note.raw
pitchtrack/test/PitchTrack/: TrackSpec.hs
pitchtrack/test/files/: a4-5sec.raw
