name: dywapitchtrack
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2015 Lorenzo Tabacchini
maintainer: lortabac@gmx.com
bug-reports: https://github.com/lortabac/pitchtrack/issues
synopsis: Pitch tracking library
description:
    Bindings to the
    <http://www.schmittmachine.com/dywapitchtrack.html dywapitchtrack>
    pitch tracking library by Antoine Schmitt.
    .
    The algorithm is described in a paper by Eric Larson and Ross Maddox:
    <http://courses.physics.illinois.edu/phys406/NSF_REU_Reports/2005_reu/Real-Time_Time-Domain_Pitch_Tracking_Using_Wavelets.pdf Real-Time Time-Domain Pitch Tracking Using Wavelets>.
    .
    For a higher level interface, use the 'pitchtrack' package.
category: Sound
author: Lorenzo Tabacchini
tested-with: GHC >=7.10
extra-source-files:
    cbits
    include

source-repository head
    type: git
    location: https://github.com/lortabac/pitchtrack.git

library
    exposed-modules:
        DywaPitchTrack
    build-depends:
        base >=4.8 && <4.9,
        bytestring -any,
        transformers -any
    c-sources:
        cbits/dywapitchtrack.c
    default-language: Haskell2010
    includes:
        dywapitchtrack.h
    include-dirs: include
    hs-source-dirs: src
    other-modules:
        DywaPitchTrack.Internal.Bindings
    ghc-options: -Wall
