name: pitchtrack
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2015 Lorenzo Tabacchini
maintainer: lortabac@gmx.com
bug-reports: https://github.com/lortabac/pitchtrack/issues
synopsis: Pitch tracking library
description:
    Pipes-based high level interface to the 'dywapitchtrack' library.
category: Sound
author: Lorenzo Tabacchini
tested-with: GHC >=7.10

source-repository head
    type: git
    location: https://github.com/lortabac/pitchtrack.git

library
    exposed-modules:
        PitchTrack
        PitchTrack.Track
        PitchTrack.Pipes
    build-depends:
        base >=4.8 && <4.9,
        bytestring -any,
        dywapitchtrack -any,
        pipes -any,
        pipes-bytestring -any,
        process -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
