name: pitchtrack
version: 0.1.0.1
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2015 Lorenzo Tabacchini
maintainer: lortabac@gmx.com
bug-reports: https://github.com/lortabac/pitchtrack/issues
synopsis: Pitch tracking library
description:
    Pitch tracking library, based on <http://www.schmittmachine.com/dywapitchtrack.html dywapitchtrack>.
    .
    See the "PitchTrack.Track" module for an easy, "ready to use" interface,
    or "PitchTrack.Pipes" for Pipes-based components, if you need more flexibility.
    .
    Note that because all parameters are hard-coded into the C library,
    you are limited to the following audio configuration:
    .
    * raw (headerless) format
    .
    * a sampling rate of 44100Hz,
    .
    * a sample size of @sizeof(double)@
    .
    * floating-point encoding
    .
    * one channel (mono)
category: Sound
author: Lorenzo Tabacchini
tested-with: GHC >=7.10
extra-source-files:
    test/files/a4-5sec.raw

source-repository head
    type: git
    location: https://github.com/lortabac/pitchtrack.git

library
    exposed-modules:
        PitchTrack
        PitchTrack.Track
        PitchTrack.Pipes
    build-depends:
        base >=4.8 && <4.9,
        bytestring -any,
        dywapitchtrack -any,
        pipes -any,
        pipes-bytestring -any,
        process -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.8 && <4.9,
        bytestring -any,
        dywapitchtrack -any,
        hspec -any,
        pipes -any,
        pipes-bytestring -any,
        process -any,
        transformers -any
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        PitchTrack
        PitchTrack.Track
        PitchTrack.Pipes
        PitchTrack.TrackSpec
    ghc-options: -Wall
